250808 1146 황승우 헤더 푸터 적용

--- a/webapp/app/admin/adminLogin.html
+++ b/webapp/app/admin/adminLogin.html
@@ -7,12 +7,13 @@
   <title>관리자로그인</title>
   <link rel="stylesheet" href="./../../assets/css/admin/basic.css">
   <link rel="stylesheet" href="./../../assets/css/admin/adminLogin.css">
+  <link rel="stylesheet" href="./../../assets/css/header.css">
+  <link rel="stylesheet" href="./../../assets/css/footer.css">
+  <script defer src="./../../assets/js/main/include.js"></script>
 </head>
 
 <body>
-  <header>
-    <h1>헤더더ㅓ덛더</h1>
-  </header>
+  <div id="header"></div>
   <main>
     <section class="login">
       <form action="" method="">
@@ -33,9 +34,7 @@
       </form>
     </section>
   </main>
-  <footer>
-    <h1>푸터터터ㅓㅌ</h1>
-  </footer>
+  <div id="footer"></div>
 </body>
 
 </html>
