--- a/webapp/app/login/login.html
+++ b/webapp/app/login/login.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>로그인페이지</title>
     <link rel="stylesheet" href="./../../assets/css/login/login.css" />
+      <link rel="stylesheet" href="./../../assets/css/header.css">
+  <link rel="stylesheet" href="./../../assets/css/footer.css">
+  <script defer src="./../../assets/js/main/include.js"></script>
   </head>
 
   <body>
-    <header>
-      <h1>헤더입니다.</h1>
-    </header>
+  <div id="header"></div>
     <main>
       <section class="login">
         <form action="" method="">
@@ -38,8 +39,6 @@
       </section>
     </main>
 
-    <footer>
-      <h1>푸터입니다.</h1>
-    </footer>
+  <div id="footer"></div>
   </body>
 </html>
