--- a/webapp/app/login/findId.html
+++ b/webapp/app/login/findId.html
@@ -6,11 +6,12 @@
     <title>아이디 찾기</title>
     <link rel="stylesheet" href="./../../assets/css/login/basic.css" />
     <link rel="stylesheet" href="./../../assets/css/login/findId.css" />
+    <link rel="stylesheet" href="./../../assets/css/header.css">
+  <link rel="stylesheet" href="./../../assets/css/footer.css">
+  <script defer src="./../../assets/js/main/include.js"></script>
   </head>
   <body>
-    <header>
-      <h1>헤더입니다.</h1>
-    </header>
+  <div id="header"></div>
     <main>
       <section class="findId">
         <form action="" method="">
@@ -62,8 +63,6 @@
       </section>
     </main>
 
-    <footer>
-      <h1>푸터입니다.</h1>
-    </footer>
+  <div id="footer"></div>
   </body>
 </html>
