--- a/webapp/app/login/findPasswordResult.html
+++ b/webapp/app/login/findPasswordResult.html
@@ -6,11 +6,12 @@
     <title>비밀번호 수정 결과</title>
     <link rel="stylesheet" href="./../../assets/css/login/basic.css" />
     <link rel="stylesheet" href="./../../assets/css/login/findPasswordResult.css" />
+      <link rel="stylesheet" href="./../../assets/css/header.css">
+  <link rel="stylesheet" href="./../../assets/css/footer.css">
+  <script defer src="./../../assets/js/main/include.js"></script>
   </head>
   <body>
-    <header>
-      <h1>헤더입니다.</h1>
-    </header>
+  <div id="header"></div>
     <main>
       <section class="result">
         <div class="result_content">
@@ -23,8 +24,6 @@
         </div>
       </section>
     </main>
-    <footer>
-      <h1>푸터입니다.</h1>
-    </footer>
+  <div id="footer"></div>
   </body>
 </html>
