--- a/webapp/app/sign/signSucces.html
+++ b/webapp/app/sign/signSucces.html
@@ -6,11 +6,12 @@
     <title>회원가입성공</title>
     <link rel="stylesheet" href="./../../assets/css/login/basic.css" />
     <link rel="stylesheet" href="./../../assets/css/sign/signSucces.css" />
+      <link rel="stylesheet" href="./../../assets/css/header.css">
+  <link rel="stylesheet" href="./../../assets/css/footer.css">
+  <script defer src="./../../assets/js/main/include.js"></script>
   </head>
   <body>
-    <header>
-      <h1>헤더입니다.</h1>
-    </header>
+<div id="header"></div>
     <main>
       <section class="result">
         <div class="result_content">
@@ -27,8 +28,6 @@
         </div>
       </section>
     </main>
-    <footer>
-      <h1>푸터입니다.</h1>
-    </footer>
+  <div id="footer"></div>
   </body>
 </html>
