--- a/webapp/app/sign/terms.html
+++ b/webapp/app/sign/terms.html
@@ -7,12 +7,13 @@
   <title>약관</title>
   <link rel="stylesheet" href="./../../assets/css/sign/basic.css">
   <link rel="stylesheet" href="./../../assets/css/sign/terms.css">
+    <link rel="stylesheet" href="./../../assets/css/header.css">
+  <link rel="stylesheet" href="./../../assets/css/footer.css">
+  <script defer src="./../../assets/js/main/include.js"></script>
 </head>
 
 <body>
-  <header>
-    <h1>헤더</h1>
-  </header>
+  <div id="header"></div>
   <main>
     <section class="terms">
       <form action="" method="">
@@ -70,9 +71,7 @@
       </form>
     </section>
   </main>
-  <footer>
-    <h1>푸터</h1>
-  </footer>
+<div id="footer"></div>
 
 </body>
 
