250808 13:39 이재빈 전체 수정중

--- a/webapp/app/myPageNormal/normalReference.html
+++ b/webapp/app/myPageNormal/normalReference.html
@@ -5,26 +5,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Normal_reference</title>
-  <link rel="stylesheet" href="./../../assets/css/myPageNormal/Normal_reference.css">
+  <link rel="stylesheet" href="./../../assets/css/myPageNormal/normalReference.css">
+  <link rel="stylesheet" href="./../../assets/css/header.css">
+  <link rel="stylesheet" href="./../../assets/css/footer.css">
+  <script defer src="./../../assets/js/main/include.js"></script>
 </head>
 
 <body>
-  <header>
-
-  </header>
+  <div id="header"></div>
   <main>
     <nav class="main_sidebar">
       <div></div>
       <ul>
-        <li>개인정보 수정</li>
-        <li>찜한 목록</li>
-        <li>하트 목록</li>
-        <li>매칭 기록</li>
-        <li>쪽지함</li>
-        <li>게시글 관리</li>
-        <li>포인트 충전</li>
-        <li>1 대 1 문의</li>
-        <li>회원 탈퇴</li>
+        <a href="./normalModify.html"><li>개인정보 수정</li></a>
+        <a href="./normalMark.html"><li>찜한 목록</li></a>
+        <a href=""><li>하트 목록</li></a>
+        <a href="./normalMatching.html"><li>매칭 기록</li></a>
+        <a href="./normalMesseage.html"><li>쪽지함</li></a>
+        <a href="./normalPost.html"><li>게시글 관리</li></a>
+        <a href="./normalPoint.html"><li>포인트 충전</li></a>
+        <a href="./normalReference.html"><li>1 대 1 문의</li></a>
+        <a href=""><li>회원 탈퇴</li></a>
       </ul>
     </nav>
 
@@ -63,9 +64,7 @@
       </form>
     </div>
   </main>
-  <footer>
-
-  </footer>
+  <div id="footer"></div>
 </body>
 
 </html>
