250808 14:21 장성주 돌봄 마이페이지 작성중

--- a/webapp/app/myPageCare/careProfile.html
+++ b/webapp/app/myPageCare/careProfile.html
@@ -71,17 +71,19 @@
                 <button id="check">확인</button>
               </div>
               <div>
-                <div class="recode">이력
+                <div class="recode">이력</div>
                   <li>
-                    <label class="license" for="license"> 파일 선택 </label>
-                    <input type="file" id="license" placeholder="자격증 1" style="display: none;">
+                    <label class="license" for="license"> 자격증 1 </label>
+                    <input type="file" id="license" placeholder="자격증 1">
                   </li>
                 </div>
                 <li>
-                  <input type="file" placeholder="계좌 사본">
+                  <label class="license" for="manuscript"> 계좌 사본 </label>
+                  <input type="file" id="manuscript" placeholder="계좌 사본">
                 </li>
                 <li>
-                  <input type="file" placeholder="이력">
+                  <label class="license" for="experience"> 주요 이력 </label>
+                  <input type="file" id="experience" placeholder="이력">
                 </li>
                 <div></div>
               </div>
@@ -103,22 +105,9 @@
               </nav>
             </div>
             <div>
-              <div>전화번호</div>
-              <div>010-1234-5678</div>
-              <button>수정</button>
-            </div>
-            <div>
-              <div>아이디</div>
-              <div>qwer</div>
-            </div>
-            <div>
               <div>이메일</div>
               <input type="text" placeholder="fdsfs@naver.com">
               <button>수정</button>
-            </div>
-            <div>
-              <div>비밀번호</div>
-
             </div>
           </div>
         </form>
