--- a/webapp/app/admin/userManager.html
+++ b/webapp/app/admin/userManager.html
@@ -1,13 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>회원관리</title>
   <link rel="stylesheet" href="./../../assets/css/admin/">
+  <link rel="stylesheet" href="./../../assets/css/header.css">
+  <link rel="stylesheet" href="./../../assets/css/footer.css">
+  <link rel="stylesheet" href="./../../assets/css/admin/basic.css">
+  <link rel="stylesheet" href="./../../assets/css/admin/userManager.css">
+  <link rel="stylesheet" href="./../../assets/css/admin/sidebar.css">
+  <script defer src="./../../assets/js/main/include.js"></script>
+  <script defer src="./../../assets/js/admin/admin.js"></script>
 </head>
+
 <body>
-  testsetest
-  
+  <div id="header"></div>
+  <main>
+    <div id="sidebar"></div>
+    <section class="userManager">
+      <div class="title">
+        <h1>회원관리</h1>
+      </div>
+      <form action="" method="">
+        <div class="searchbox">
+          <select name="column" id="">
+            <option value="number">회원 번호</option>
+            <option value="name">회원 이름</option>
+            <option value="id">회원 아이디</option>
+            <option value="email">회원 이메일</option>
+            <option value="phone">회원 전화번호</option>
+            <option value="type">회원 분류</option>
+          </select>
+        </div>
+      </form>
+      <div></div>
+      <div></div>
+    </section>
+  </main>
+
+
+
+  <div id="footer"></div>
+
 </body>
+
 </html>
