--- a/webapp/app/admin/userManager.html
+++ b/webapp/app/admin/userManager.html
@@ -20,23 +20,26 @@
   <main>
     <div id="sidebar"></div>
     <section class="userManager">
-      <div class="title">
-        <h1>회원관리</h1>
-      </div>
-      <form action="" method="">
-        <div class="searchbox">
-          <select name="column" id="">
-            <option value="number">회원 번호</option>
-            <option value="name">회원 이름</option>
-            <option value="id">회원 아이디</option>
-            <option value="email">회원 이메일</option>
-            <option value="phone">회원 전화번호</option>
-            <option value="type">회원 분류</option>
-          </select>
+      <div>
+        <div class="title">
+          <h1>회원관리</h1>
         </div>
-      </form>
-      <div></div>
-      <div></div>
+        <form action="" method="">
+          <div class="searchbox">
+            <select name="column" id="" class="search_column">
+              <option value="number">회원 번호</option>
+              <option value="name">회원 이름</option>
+              <option value="id">회원 아이디</option>
+              <option value="email">회원 이메일</option>
+              <option value="phone">회원 전화번호</option>
+              <option value="type">회원 분류</option>
+            </select>
+          </div>
+        </form>
+        <div></div>
+        <div></div>
+
+      </div>
     </section>
   </main>
 
