250808 14:24 이재빈 회원탈퇴 중

--- a/webapp/app/myPageNormal/normalModify.html
+++ b/webapp/app/myPageNormal/normalModify.html
@@ -14,17 +14,17 @@
   <div id="header"></div>
   <main>
     <nav class="main_sidebar">
-      <div></div>
+      <img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#">
       <ul>
         <a href="./normalModify.html"><li>개인정보 수정</li></a>
         <a href="./normalMark.html"><li>찜한 목록</li></a>
-        <a href=""><li>하트 목록</li></a>
+        <a href="./normalheart.html"><li>하트 목록</li></a>
         <a href="./normalMatching.html"><li>매칭 기록</li></a>
         <a href="./normalMesseage.html"><li>쪽지함</li></a>
         <a href="./normalPost.html"><li>게시글 관리</li></a>
         <a href="./normalPoint.html"><li>포인트 충전</li></a>
         <a href="./normalReference.html"><li>1 대 1 문의</li></a>
-        <a href=""><li>회원 탈퇴</li></a>
+        <a href="./normalQuit.html"><li>회원 탈퇴</li></a>
       </ul>
     </nav>
 
