--- a/webapp/app/myPageNormal/normalQuit.html
+++ b/webapp/app/myPageNormal/normalQuit.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Normal_PwCheck</title>
-  <link rel="stylesheet" href="./../../assets/css/myPageNormal/normalPwCheck.css">
+  <title>Normal_Quit</title>
+  <link rel="stylesheet" href="./../../assets/css/myPageNormal/normalQuit.css">
   <link rel="stylesheet" href="./../../assets/css/header.css">
   <link rel="stylesheet" href="./../../assets/css/footer.css">
   <script defer src="./../../assets/js/main/include.js"></script>
 </head>
+</head>
+
 <body>
   <div id="header"></div>
   <main>
@@ -26,14 +29,25 @@
         <a href="./normalQuit.html"><li>회원 탈퇴</li></a>
       </ul>
     </nav>
-    <div class="pw_check">
-      <form action="" method="get"> 
-        비밀번호<input type="password" placeholder="비밀번호 8자리 입력">
-        <button>비밀번호 확인</button>
-        <div>일치하지 않는 비밀번호 입니다</div>
+    <div class="div_mark">
+      <div class="title">회원 탈퇴</div>
+      <div class="arlim">
+        <div></div>
+        <nav>
+          <ul>
+            <li>· 더 이상의 이용을 원하지 않는 불필요한 사이트의 대한 회원 탈퇴 처리</li>
+            <li class="li_color">· 본 서비스는 본인인증 내역을 기반으로 제공되는 서비스로, 회원 탈퇴시 60일간 회원가입이 불가하며 그에 따른 불이익은 책임 지지 않습니다. </li>
+            <li class="li_color">· 회원 탈퇴시 보유한 포인트는 전부 소멸 됩니다.</li>
+          </ul>
+        </nav>
+      </div>
+      <form action="" method="get">
+        
       </form>
     </div>
+    
   </main>
   <div id="footer"></div>
 </body>
+
 </html>
