--- a/webapp/app/myPageNormal/normalReference.html
+++ b/webapp/app/myPageNormal/normalReference.html
@@ -1,70 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Normal_reference</title>
+  <title>Normal_Reference</title>
   <link rel="stylesheet" href="./../../assets/css/myPageNormal/normalReference.css">
   <link rel="stylesheet" href="./../../assets/css/header.css">
   <link rel="stylesheet" href="./../../assets/css/footer.css">
   <script defer src="./../../assets/js/main/include.js"></script>
 </head>
-
 <body>
   <div id="header"></div>
   <main>
     <nav class="main_sidebar">
-      <div></div>
+      <img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#">
       <ul>
         <a href="./normalModify.html"><li>개인정보 수정</li></a>
         <a href="./normalMark.html"><li>찜한 목록</li></a>
-        <a href=""><li>하트 목록</li></a>
+        <a href="./normalheart.html"><li>하트 목록</li></a>
         <a href="./normalMatching.html"><li>매칭 기록</li></a>
         <a href="./normalMesseage.html"><li>쪽지함</li></a>
         <a href="./normalPost.html"><li>게시글 관리</li></a>
         <a href="./normalPoint.html"><li>포인트 충전</li></a>
         <a href="./normalReference.html"><li>1 대 1 문의</li></a>
-        <a href=""><li>회원 탈퇴</li></a>
+        <a href="./normalQuit.html"><li>회원 탈퇴</li></a>
       </ul>
     </nav>
-
-    <div class="div_mark">
-      <div class="title">1 대 1 문의</div>
-      <form action="" method="get">
+    <form action="" method="get">
+      <div class="div_mark">
+        <div class="title">1 대 1 문의</div>
         <nav class="div_choose">
           <ul>
             <li>1 대 1 문의 목록</li>
           </ul>
         </nav>
-      
         <nav class="mark_nav">
           <input type="checkbox">
-          <ul>
-
-            <li>작성자</li>
-            <li>제목</li>
-            <li>날짜</li>
-          </ul>
+          <div>
+            <div class="name">
+              <div>작성자</div>
+            </div>
+            <div class="location">
+              <div>제목</div>
+            </div>
+            <div class="phone">
+              <div>신청날짜</div>
+            </div>
+            <div class="phone">
+              <div>확인여부</div>
+            </div>
+          </div>
+        </nav>
+        <nav class="mark_list">
+          <input type="checkbox">
+          <a href="">
+          <div>
+            <div class="name">
+              <div>작성자</div>
+            </div>
+            <div class="location">
+              <div>제목</div>
+            </div>
+            <div class="phone">
+              <div>신청날짜</div>
+            </div>
+            <div class="phone">
+              <div>확인여부</div>
+            </div>
+          </div>
+          </a>
+        </nav>
+        <nav class="mark_list">
+          <input type="checkbox">
+          <a href="">
+          <div>
+            <div class="name">
+              <div>작성자</div>
+            </div>
+            <div class="location">
+              <div>제목</div>
+            </div>
+            <div class="phone">
+              <div>신청날짜</div>
+            </div>
+            <div class="phone">
+              <div>확인여부</div>
+            </div>
+          </div>
+          </a>
         </nav>
         <nav class="page">
           <ul>
-            <li>&lt;</li>
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
-            <li>4</li>
-            <li>&gt;</li>
+            <a href=""><li>&lt;</li></a>
+            <a href=""><li>1</li></a>
+            <a href=""><li>2</li></a>
+            <a href=""><li>3</li></a>
+            <a href=""><li>4</li></a>
+            <a href=""><li>&gt;</li></a>
           </ul>
-
         </nav>
         <div class="div_delete">
           <button>등록</button>
         </div>
-      </form>
-    </div>
+      </div>
+    </form>
+  
   </main>
   <div id="footer"></div>
 </body>
-
 </html>
