--- a/webapp/app/myPageNormal/normalPoint.html
+++ b/webapp/app/myPageNormal/normalPoint.html
@@ -16,26 +16,23 @@
   <div id="header"></div>
   <main>
     <nav class="main_sidebar">
-      <div></div>
+      <img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#">
       <ul>
         <a href="./normalModify.html"><li>개인정보 수정</li></a>
         <a href="./normalMark.html"><li>찜한 목록</li></a>
-        <a href=""><li>하트 목록</li></a>
+        <a href="./normalheart.html"><li>하트 목록</li></a>
         <a href="./normalMatching.html"><li>매칭 기록</li></a>
         <a href="./normalMesseage.html"><li>쪽지함</li></a>
         <a href="./normalPost.html"><li>게시글 관리</li></a>
         <a href="./normalPoint.html"><li>포인트 충전</li></a>
         <a href="./normalReference.html"><li>1 대 1 문의</li></a>
-        <a href=""><li>회원 탈퇴</li></a>
+        <a href="./normalQuit.html"><li>회원 탈퇴</li></a>
       </ul>
     </nav>
-
     <div class="div_mark">
       <div class="title">개인정보 수정</div>
       <div class="arlim">
-        <div>
-
-        </div>
+        <div></div>
         <nav>
           <ul>
             <li>저희 함께걸음은 회원님의 개인 정보를 신중히 취급하며, 회원님의 동의 없이 기재하신 회원정보를 공개하지 않습니다.</li>
