--- a/webapp/app/myPageNormal/normalQuit.html
+++ b/webapp/app/myPageNormal/normalQuit.html
@@ -42,7 +42,20 @@
         </nav>
       </div>
       <form action="" method="get">
-        
+        <div class="quit_box">
+          <div class="quit_day">
+            <div class="quit_text">탈퇴 날짜</div>
+            <div>2025-08-08</div>
+          </div>
+          <div class="quit_reason">
+            <div class="quit_text">탈퇴 사유</div>
+            <div>
+              <div>탈퇴 사유를 입력하여 주십시오.</div>
+              <div>v</div>
+            </div>
+          </div>
+        </div>
+        <button>다음</button>
       </form>
     </div>
     
