250808 1438 황승우 회원관리 작업중2

--- a/webapp/app/admin/userManager.html
+++ b/webapp/app/admin/userManager.html
@@ -47,7 +47,40 @@
             <div class="board_head board_phone">회원 전화번호</div>
             <div class="board_head board_type">회원 분류</div>
           </div>
-          <div></div>
+          <div class="board_body">
+            <ul>
+              <a href="">
+                <li>
+                  <div class="board_head board_number">회원 번호</div>
+                </li>
+              </a>
+              <a href="">
+                <li>
+                  <div class="board_head board_name">회원 이름</div>
+                </li>
+              </a>
+              <a href="">
+                <li>
+                  <div class="board_head board_id">회원 아이디</div>
+                </li>
+              </a>
+              <a href="">
+                <li>
+                  <div class="board_head board_email">회원 이메일</div>
+                </li>
+              </a>
+              <a href="">
+                <li>
+                  <div class="board_head board_phone">회원 전화번호</div>
+                </li>
+              </a>
+              <a href="">
+                <li>
+                  <div class="board_head board_type">회원 분류</div>
+                </li>
+              </a>
+            </ul>
+          </div>
         </div>
 
       </div>
