250808 1811 황승우 회원관리 작업중2

--- a/webapp/app/admin/sidebar.html
+++ b/webapp/app/admin/sidebar.html
@@ -2,47 +2,47 @@
     <ul>
       <div class="blank"></div>
       <a href="">
-        <li>회원관리</li>
+        <li class="side_attach">회원관리</li>
       </a>
       <div class="board">
-        <li>일반 게시글 관리</li>
+        <li class="side_attach">일반 게시글 관리</li>
         <ul class="side_menu side_normal_board">
           <a href="#">
-            <li>공지사항 관리</li>
+            <li class="side_attach">공지사항 관리</li>
           </a>
           <a href="#">
-            <li>신고글 관리</li>
+            <li class="side_attach">신고글 관리</li>
           </a>
         </ul>
       </div>
       </a>
       <div class="board">
-        <li>뉴스 게시글 관리</li>
+        <li class="side_attach">뉴스 게시글 관리</li>
         <ul class="side_menu side_news_board">
           <a href="#">
-            <li>뉴스 게시물</li>
+            <li class="side_attach">뉴스 게시물</li>
           </a>
           <a href="#">
-            <li>배너 게시물</li>
+            <li class="side_attach">배너 게시물</li>
           </a>
         </ul>
       </div>
       <a href="">
-        <li>돌봄회원 환급 관리</li>
+        <li class="side_attach">돌봄회원 환급 관리</li>
       </a>
       <div class="board">
-        <li>돌봄 회원 신청</li>
+        <li class="side_attach">돌봄 회원 신청</li>
         <ul class="side_menu side_news_board">
           <a href="#">
-            <li>신청 관리</li>
+            <li class="side_attach">신청 관리</li>
           </a>
           <a href="#">
-            <li>수강 관리</li>
+            <li class="side_attach">수강 관리</li>
           </a>
         </ul>
       </div>
       <a href="">
-        <li>1:1 문의사항</li>
+        <li class="side_attach">1:1 문의사항</li>
       </a>
     </ul>
   </div>
