--- a/webapp/app/admin/userManager.html
+++ b/webapp/app/admin/userManager.html
@@ -50,32 +50,32 @@
           <div class="board_body">
             <ul>
               <a href="">
-                <li>
+                <li class="board_link board_number">
                   <div class="board_head board_number">회원 번호</div>
                 </li>
               </a>
               <a href="">
-                <li>
+                <li class="board_link board_name">
                   <div class="board_head board_name">회원 이름</div>
                 </li>
               </a>
               <a href="">
-                <li>
+                <li class="board_link board_id">
                   <div class="board_head board_id">회원 아이디</div>
                 </li>
               </a>
               <a href="">
-                <li>
+                <li class="board_link">
                   <div class="board_head board_email">회원 이메일</div>
                 </li>
               </a>
               <a href="">
-                <li>
+                <li class="board_link">
                   <div class="board_head board_phone">회원 전화번호</div>
                 </li>
               </a>
               <a href="">
-                <li>
+                <li class="board_link">
                   <div class="board_head board_type">회원 분류</div>
                 </li>
               </a>
