--- a/webapp/app/subwayLine/subway.html
+++ b/webapp/app/subwayLine/subway.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>RB</title>
 <link rel="stylesheet" href="./../../assets/css/subwayLine/subway.css">
-<script defer src="./../../assets/js/subwayLine/subwayLine.js"></script>
+<script defer src="./../../assets/js/subwayLine/subway.js"></script>
 </head>
 <body>
 <header>
@@ -24,7 +24,7 @@
       <button id="dxline"> 신분당선 </button>
     </div>
   </div>
-  <div class="map_section"> <!-- 여기는 지도가 들어갈 겁애유 이미지..도 들어가나-->
+  <div class="map_section">
     <div class="subway_allline_img">
       <img src="./../../assets/img/subwayLine/allline.png" alt="전체호선사진">
     </div>
@@ -143,9 +143,6 @@
     </div>
   </div>
 
-  <section class="station_info">
-    <p>역 정보 출력</p>
-  </section>
 </main>
 <footer>
 
