--- a/webapp/app/myPageCare/careMatching.html
+++ b/webapp/app/myPageCare/careMatching.html
@@ -11,17 +11,33 @@
   
   </header>
   <main>
-    <nav class="main_sidebar">
-      <div></div>
+    <nav class="sidebar">
       <ul>
-        <li>개인정보 수정</li>
-        <li>찜한 목록</li>
-        <li>매칭 기록</li>
-        <li>쪽지함</li>
-        <li>게시글 관리</li>
-        <li>포인트 환급</li>
-        <li>1 대 1 문의</li>
-        <li>회원 탈퇴</li>
+        <a href=""><img src="./../../assets/img/myPageCare/peple.jpg" alt=""></a>
+        <a href="">
+          <li>개인정보 수정</li>
+        </a>
+        <a href="">
+          <li>찜한 목록</li>
+        </a>
+        <a href="">
+          <li>매칭 기록</li>
+        </a>
+        <a href="">
+          <li>쪽지함</li>
+        </a>
+        <a href="">
+          <li>게시글 관리</li>
+        </a>
+        <a href="">
+          <li>포인트 환급</li>
+        </a>
+        <a href="">
+          <li>1 대 1 문의</li>
+        </a>
+        <a href="">
+          <li>회원 탈퇴</li>
+        </a>
       </ul>
     </nav>
   
